--- a/test.html
+++ b/test.html
@@ -4,42 +4,19 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="test.css">
+    <meta name="viewport" content="with=device-width,initial-scale=1.0">
 </head>
 <body>
 
- <!--<p>卧槽！！！！！！！ <br>-->
- <!--牛逼！</p>-->
-<!--<div class="before-test">-->
-    <!--卧槽！-->
-<!--</div>-->
-<!--<div class="after-test" data-code="123456">哈哈哈哈</div>-->
-<!--<div class="before-counter">-->
-    <!--<h1>XML</h1>-->
-    <!--<h2>XML</h2>-->
-    <!--<h3>XML</h3>-->
-    <!--<h4>XML</h4>-->
-<!--</div>-->
 
-<div class="container">
-    <ul class="by-index">
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-
-    </ul>
+<div class="em-container" >
+      <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
 </div>
+
+
 </body>
 </html>
