--- a/exercise2.html
+++ b/exercise2.html
@@ -575,6 +575,7 @@
              <span>@2015 duitang.com版权所有。xxxxxxxxxxxxx</span> <img src="images/protected.png" alt="">
                 </div>
             </div>
+            <div class="bannerIcon-container"></div>
         </div>
 
 </body>
