--- a/media-test.html
+++ b/media-test.html
@@ -5,7 +5,7 @@
         .container{
             width:100vw;
             height: 60vh;
-            background-color:#000;
+            /*background-color:#000;*/
             padding:1px;
             font-family: glyphicons;
         }
@@ -51,6 +51,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Title</title>
+    <link rel="stylesheet" media="screen and (min-width:0px)" href="./style/media/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width:800px)" href="./style/media/tablet.css">
+    <link rel="stylesheet" media="screen and (min-width:1000px)" href="./style/media/pc.css">
 
 </head>
 <body>
