--- a/learnFlex/index/learnFlex.html
+++ b/learnFlex/index/learnFlex.html
@@ -10,6 +10,10 @@
 </head>
 <body>
    <div class="desktop-container">
+       <input type="checkbox" id="checkbox1"><label for="checkbox1" style="color: #d6d6d6; font-size: 2vw;
+    font-style: italic;
+    font-family: Arial;
+    font-weight: bold;">vskr</label>
        <div class="function-container">
            <div class="function">
             <div class="studentDaily"> <span>学员日常</span></div>
@@ -35,7 +39,7 @@
        </div>
        <img src="../image/desktop-image.png" alt="" style="width: 100vw;height: 93vh">
        <div class="desktopName">
-           vskr <span style="margin-left:40px ">学习管理系统</span>
+            <span style="margin-left:40px ">学习管理系统</span>
        </div>
    </div>
 <div class="moblie-container">
