--- a/learnFlex/index/learnFlex.html
+++ b/learnFlex/index/learnFlex.html
@@ -10,14 +10,11 @@
 </head>
 <body>
    <div class="desktop-container">
-       <input type="checkbox" id="checkbox1"><label for="checkbox1" style="color: #d6d6d6; font-size: 2vw;
-    font-style: italic;
-    font-family: Arial;
-    font-weight: bold;">vskr</label>
-       <div class="function-container">
+       <input type="button" value="vskr" id="b">
+       <div class="function-container" >
            <div class="function">
-            <div class="studentDaily"> <span>学员日常</span></div>
-             <div class="classExpression"><span>课堂表现</span></div>
+               <div class="studentDaily"> <span>学员日常</span></div>
+               <div class="classExpression"><span>课堂表现</span></div>
                <div class="studentGroup"><span>学员群</span></div>
                <div class="homework"><span>作业</span></div>
 
